--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,83 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+*{
+  font-family: "Montserrat", sans-serif !important;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* antd override */
+input{
+  border-radius: 2px !important;
+  border: 1px solid rgba(128, 128, 128, 0.521) !important;
+  height: 40px !important;
+}
+input:focus{
+  outline: none !important;
+  box-shadow: none !important;
+  border: 1px solid gray !important;
+}
+label{
+  font-size: 16px !important;
+  color: whitesmoke;
+}
+.ant-form-item{
+  margin: 10px 0 !important;
+}
+
+/* Common styling */
+.card-title{
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.normal-text{
+  font-size: 1rem;
+}
+
+.card{
+  box-shadow: 0 0 2pc gray ;
+  border-radius: 0%;
+}
+
+.primary-button{
+  background-color: sandybrown !important;
+  border-color: white !important;
+  height: 40px !important;
+  width: 100% !important;
+  color: white !important;
+  font-size: 16px;
+  font-weight: bolder;
+}
+
+.anchor{
+  color: burlywood !important;
+  text-decoration: underline;
+  font-size: 16px !important;
+}
+
+.anchor:hover{
+  text-decoration: underline !important;
+  color: blue !important;
+}
+/* authentication pages */
+.authentication{
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: gainsboro;
+}
+
+.authentication-form{
+  width: 400px;
+}
+
+.authentication .card-title{
+  font-size: 1.5rem;
+  font-weight: bold;
+  background-color: lemonchiffon;
+  color: burlywood !important;
+  max-width: max-content !important;
+  padding: 7px 15px;
+  margin-left: -40px;
+  border-bottom-left-radius: 10px ;
 }
