--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,24 @@ label{
 .ant-form-item{
   margin: 10px 0 !important;
 }
+.spinner-parent{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0.704);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+}
+.spinner-border{
+  width: 5rem;
+  height: 5rem;
+  color: white !important;
+}
+
 /* Common styling */
 .card-title{
   font-size: 1.5rem;
