Completed ApplyDoctor details

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ input{
   border: 1px solid rgba(128, 128, 128, 0.521) !important;
   height: 40px !important;
 }
-input:focus{
+input:focus, .ant-picker{
   outline: none !important;
   box-shadow: none !important;
   border: 1px solid gray !important;
@@ -21,6 +21,15 @@ label{
 }
 .ant-form-item{
   margin: 10px 0 !important;
+}
+.ant-picker-input input {
+  border: none !important;
+}
+.ant-picker{
+  border-radius: 2px !important;
+  border: 1px solid rgba(128, 128, 128, 0.521) !important;
+  height: 40px !important;
+  height: 40px !important;
 }
 .spinner-parent{
   display: flex;
@@ -41,9 +50,15 @@ label{
 }
 
 /* Common styling */
-.card-title{
-  font-size: 1.5rem;
+.page-title{
+  font-size: 25px;
+  color: rgba(0, 0, 0, 0.733);
   font-weight: bold;
+}
+.card-title{
+  font-size: 22px;
+  font-weight: bold;
+  color: rgba(0, 0, 0, 0.733);
 }
 .normal-text{
   font-size: 1rem;
@@ -60,6 +75,7 @@ label{
   color: white !important;
   font-size: 16px;
   font-weight: bolder;
+  width: max-content !important;
 }
 .anchor{
   color: burlywood !important;
