Doctor API and Testing with form , Admin and Delete Notifications are done successfully

--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,7 @@ label{
   color: burlywood !important;
   text-decoration: underline;
   font-size: 16px !important;
+  cursor: pointer;
 }
 .anchor:hover{
   text-decoration: underline !important;
